Restyle components with Standard.js

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react-scripts": "3.4.1",
     "uuid": "^8.2.0"
   },
+  "devDependencies": {
+    "standard": "^14.3.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
