--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "shuffle-array": "^1.0.1",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
